Se agrega chat wsp

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <span class="text-primary">Gonzalo</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Bernal, 1876 · (11) 67980276·
+                        Bernal, 1876 · <a href="http:/wa.link/4m2697">(11) 67980276·</a>
                         <a href="mailto:name@email.com">Gonzaloferreyra93@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Tengo experiencia en desarrollo de sotware a medida con herramientas desafiantes, Trabajo en equipo y tambien en el area de Soporte de Aplicaciones e Incidencias Criticas</p>
+                    <p class="lead mb-5">Tengo experiencia en desarrollo de software a medida con herramientas desafiantes, Trabajo en equipo y tambien en el area de Soporte de Aplicaciones e Incidencias Criticas</p>
                     <div class="social-icons">
                         <a class="social-icon" href="http:/www.linkedin.com/in/gonzalo-nicolas-ferreyra-66a49186"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/gonzaloferreyra2021"><i class="fab fa-github"></i></a>
