Se fixean errores

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 con tickets y monitoreo Dashboards para anticipar y resolver problemas dentro de los flujos de trabajo de la operacion 
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - Presente</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Marzo 2020 - Presente</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -76,7 +76,7 @@
                             <div class="subheading mb-3">Exisoft</div>
                             <p>Creacion de webservices utilizando herramientas de IBM (Integration Bus) y programacion en ESQL. Migracion de servicios a API REST para su posterior consumo</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Febrero 2019 - March 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Febrero 2019 - Marzo 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         
@@ -165,7 +165,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Html y Css3 avanzado - Educacion IT
+                            Html y CSS3 avanzado - Educacion IT
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
