--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <div class="subheading mb-3">Andreani Logistica S.A</div>
                             <p>Creacion de componentes comunes para la compañia en el area de arquitectura. Manejo de Scrum y mantenimiento y mejoras de aplicaciones vintage</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Febrero 2019 - Marzo 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Septiembre 2021 - Actualmente</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         
