--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experiencia</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <h3 class="mb-0">Desarrollador Ssr</h3>
+                                <div class="subheading mb-3">Andreani Logistica S.A</div>
+                                <p>Creacion de componentes comunes para la compañia en el area de arquitectura. Manejo de Scrum y mantenimiento y mejoras de aplicaciones vintage</p>
+                            </div>
+                            <div class="flex-shrink-0"><span class="text-primary">Septiembre 2021 - Actualmente</span></div>
+                        </div>
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Soporte de aplicaciones Jr</h3>
                             <div class="subheading mb-3">Mercado Libre</div>
@@ -68,7 +76,7 @@
                                 con tickets y monitoreo Dashboards para anticipar y resolver problemas dentro de los flujos de trabajo de la operacion 
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Marzo 2020 - Presente</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Marzo 2020 - Septiembre 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -77,14 +85,6 @@
                             <p>Creacion de webservices utilizando herramientas de IBM (Integration Bus) y programacion en ESQL. Migracion de servicios a API REST para su posterior consumo</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Febrero 2019 - Marzo 2020</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Desarrollador Ssr</h3>
-                            <div class="subheading mb-3">Andreani Logistica S.A</div>
-                            <p>Creacion de componentes comunes para la compañia en el area de arquitectura. Manejo de Scrum y mantenimiento y mejoras de aplicaciones vintage</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Septiembre 2021 - Actualmente</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         
